# rust-wgpu-shader-sandbox

./: Cargo.toml  todo.txt
objects/: Untitled.mtl
src/: camera.rs  config.rs  default.wgsl  main.rs  object.rs  post.wgsl  renderer.rs
src/config/: blur.rs  chromatic.rs  flat.rs  negative.rs  phong.rs
src/config/post/: chromatic.wgsl  negative.wgsl
src/config/shaders/: flat.wgsl  phong.wgsl
src/shaders/: phong.wgsl
